# insight-deck

./: .gitignore  README.md  config.toml  logging.yaml  main.py  pyproject.toml
insightdeck/arxiv/: __init__.py  agent.py  analyzer.py  client.py
internal/: client.py  logging.py  setting.py
src/insightdeck/: __init__.py
src/insightdeck/arxiv/: agent.py  api.py  client.py
src/internal/: __init__.py  config.py  logging.py
